log-in page implemented

--- a/src/app/components/admission/admission.component.html
+++ b/src/app/components/admission/admission.component.html
@@ -1,4 +1,4 @@
-<app-header [titel]="headerTitle"></app-header>
+<app-header [title]="headerTitle"></app-header>
 
 <body class="de win chrome blink ch86 formular pm cookiebar-active" id="top">
 
