--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,21 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.spacer5 {
+  margin-top: 5px;
+}
+
+.spacer10 {
+  margin-top: 10px;
+}
+
+.spacer30 {
+  margin-top: 100px;
+}
+
+.button-row button {
+  margin-right: 5px;
+}
