#10 reset password is done

--- a/src/app/components/log-in/reset-password/reset-password.component.html
+++ b/src/app/components/log-in/reset-password/reset-password.component.html
@@ -44,12 +44,9 @@
       <div class="panel panel-primary">
         <form class="log-in-form" #userData="ngForm">
           <div>
-            <div>
-              <p>
-                Willkommen im Projekt Anamnese System - Bitte loggen Sie sich ein
-              </p>
+            <div style="margin-bottom: 50px">
               <p style="text-align: center">
-                Kein Konto? Jetzt <a href="{{new_registration_path}}" class="pointer">registrieren</a>
+                ~ Reset password ~
               </p>
             </div>
 
@@ -57,35 +54,55 @@
             <div class="input-position">
               <mat-form-field appearance="outline" class="log-in-form-field" id="userNameForm">
                 <mat-label>Username:</mat-label>
-                <input matInput type="text" placeholder="Username"
+                <input matInput type="text" placeholder="Username" (ngModelChange)="onUserName($event)"
                        [(ngModel)]="username" name="username" id="username" required>
                 <mat-icon matSuffix class="colorEdit">account_circle</mat-icon>
               </mat-form-field>
             </div>
 
 
+            <!-- SECURITY FIELD -->
+            <div class="input-position" style="margin-top: -10px">
+              <mat-form-field appearance="outline" class="log-in-form-field" id="secretQuestionForm">
+                <mat-label>Secret question:</mat-label>
+                <input matInput autocomplete="off" placeholder="Question" type="text" disabled
+                       [(ngModel)]="secretQuestion" name="secretQuestion" id="secretQuestion" required>
+              </mat-form-field>
+            </div>
+
+            <div class="input-position" style="margin-top: -10px">
+              <mat-form-field appearance="outline" class="log-in-form-field" id="answerForm">
+                <mat-label>Answer:</mat-label>
+                <input matInput autocomplete="off" placeholder="Answer"
+                       type="text" (ngModelChange)="onAnswer($event)"
+                       [(ngModel)]="answer" name="answer" id="answer" required>
+              </mat-form-field>
+            </div>
+
             <!-- PASSWORD FIELD -->
-            <div class="input-position">
-              <mat-form-field appearance="outline" class="log-in-form-field" id="passwordForm">
-                <mat-label>Password:</mat-label>
-                <input matInput autocomplete="off" placeholder="Password"
-                       [(ngModel)]="password" name="password" id="password" required
-                       [type] = "hidePassword ? 'password' : 'text'">
+            <div class="input-position" style="margin-top: -10px">
+              <mat-form-field appearance="outline" class="log-in-form-field" id="newPasswordForm">
+                <mat-label>New password:</mat-label>
+                <input matInput autocomplete="off" placeholder="New password" [disabled]="!answerCorrect"
+                       [(ngModel)]="newPassword" name="newPassword" id="newPassword" required
+                       [type] = "hidePassword ? 'password' : 'text'" autocomplete="off">
                 <mat-icon matSuffix class="colorEdit pointer" (click)="hidePassword = !hidePassword">
                   {{hidePassword ? 'visibility_off' : 'visibility'}}
                 </mat-icon>
               </mat-form-field>
             </div>
-            <div class="text-left pointer">
-              <a href="{{reset_password_path}}" id="reset-password">Reset password</a>
+
+            <div class="text-left pointer" style="margin-top: -20px">
+              <a href="{{login_path}}" id="reset-password">Back to login</a>
             </div>
 
 
             <!-- LOG IN BUTTON -->
             <div style="margin-bottom: 65px" class="input-position">
               <button mat-raised-button type="button" class="btn btn-primary button" id="login-button"
-                      [disabled]="!username || !password || isClicked" (click)="login()">
-                {{isClicked ? 'Loading...' : 'Login'}}
+                      [disabled]="!username || !newPassword || !secretQuestion || !answer || isClicked"
+                      (click)="confirmPwdReset()">
+                {{isClicked ? 'Reset password...' : 'Reset password'}}
               </button>
             </div>
 
