--- a/src/app/components/home-patient/home-patient.component.html
+++ b/src/app/components/home-patient/home-patient.component.html
@@ -42,9 +42,10 @@
   <h2>Ressourcen</h2>
   <p>Was möchten Sie als nächstes tun???</p>
 
-  <div class="card-container" style="margin-top: 50px">
+  <div class="card-container" style="margin-top: 90px">
 
-      <a *ngIf="!currentUser.recorded" class="card" rel="noopener" routerLink="{{aufnahme_path}}" style="margin-right: 10px">
+      <a *ngIf="!currentUser.recorded" class="card" rel="noopener" routerLink="{{aufnahme_path}}"
+         style="margin-right: 10px; margin-bottom: 50px">
         <img class="material-icons" style="margin-right: 7px"
              height="24" viewBox="0 0 24 24" width="24"
              src="../../../assets/logos/new-aufnahme.jpg">
@@ -56,7 +57,8 @@
         </svg>
       </a>
 
-      <a class="card" rel="noopener" (click)="openMyProfilModal()" style="margin-right: 10px">
+      <a class="card" rel="noopener" (click)="openMyProfilModal()"
+         style="margin-right: 10px; margin-bottom: 50px">
         <mat-icon>person</mat-icon>
 
         <span>Mein Profil</span>
@@ -67,7 +69,7 @@
       </a>
 
       <a class="card" href="https://www.google.com/search?client=avast&q=Notdienstapotheke" rel="noopener"
-         target="_blank">
+         target="_blank"  style="margin-right: 10px">
         <img class="material-icons" style="margin-right: 7px"
              height="24" viewBox="0 0 24 24" width="24"
              src="../../../assets/logos/apotheke.png">
@@ -79,7 +81,8 @@
         </svg>
       </a>
 
-      <a *ngIf="currentUser.recorded" class="card" href="{{patient_info_view_path}}" routerLink="{{patient_info_view_path}}">
+      <a *ngIf="currentUser.recorded" class="card" href="{{patient_info_view_path}}"
+         routerLink="{{patient_info_view_path}}" style="margin-right: 10px; margin-bottom: 50px">
         <img class="material-icons" style="margin-right: 7px"
              height="24" viewBox="0 0 24 24" width="24"
              src="../../../assets/logos/diagnose.jpg">
@@ -91,7 +94,8 @@
         </svg>
       </a>
 
-      <a *ngIf="currentUser.recorded" class="card" href="{{patient_info_view_path}}" routerLink="{{patient_info_view_path}}">
+      <a *ngIf="currentUser.recorded" class="card" href="{{patient_info_view_path}}"
+         routerLink="{{patient_info_view_path}}" style="margin-right: 10px; margin-bottom: 50px">
         <img class="material-icons" style="margin-right: 7px"
              height="24" viewBox="0 0 24 24" width="24"
              src="../../../assets/logos/disease.png">
@@ -103,7 +107,8 @@
         </svg>
       </a>
 
-      <a *ngIf="currentUser.recorded" class="card" href="{{patient_info_view_path}}" routerLink="{{patient_info_view_path}}">
+      <a *ngIf="currentUser.recorded" class="card" href="{{patient_info_view_path}}"
+         routerLink="{{patient_info_view_path}}" style="margin-right: 10px; margin-bottom: 50px">
         <img class="material-icons" style="margin-right: 7px"
              height="24" viewBox="0 0 24 24" width="24"
              src="../../../assets/logos/allergie.png">
@@ -115,7 +120,8 @@
         </svg>
       </a>
 
-      <a *ngIf="currentUser.recorded" class="card" href="{{patient_info_view_path}}" routerLink="{{patient_info_view_path}}">
+      <a *ngIf="currentUser.recorded" class="card" href="{{patient_info_view_path}}"
+         routerLink="{{patient_info_view_path}}" style="margin-right: 10px; margin-bottom: 50px">
         <img class="material-icons" style="margin-right: 7px"
              height="24" viewBox="0 0 24 24" width="24"
              src="../../../assets/logos/medikamente.png">
