--- a/src/app/components/home-personal/home-personal.component.html
+++ b/src/app/components/home-personal/home-personal.component.html
@@ -96,9 +96,9 @@
       <a class="card" href="{{personal_info_view_path}}" routerLink="{{personal_info_view_path}}">
       <img class="material-icons" style="margin-right: 7px"
            height="24" viewBox="0 0 24 24" width="24"
-           src="../../../assets/logos/Medikamente.jfif">
+           src="../../../assets/logos/medikamente.png">
 
-      <span>Medikamenten-Einnahme</span>
+      <span>Medikamenten</span>
 
       <svg class="material-icons" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
         <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
