--- a/src/app/components/personal-info-view/allergy-list/allergy-list.component.html
+++ b/src/app/components/personal-info-view/allergy-list/allergy-list.component.html
@@ -1,6 +1,6 @@
 
 <mat-card>
-  <table mat-table [dataSource]="diagnosisList" class="mat-elevation-z8">
+  <table mat-table [dataSource]="allergyList" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -16,23 +16,10 @@
       <th mat-header-cell *matHeaderCellDef> patient </th>
       <td mat-cell *matCellDef="let patient"> {{patient.firstName}} </td>
     </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="examinations">
-      <th mat-header-cell *matHeaderCellDef> examinations </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.lastName}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> date </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> type </th>
-      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> name </th>
+      <td mat-cell *matCellDef="let patient"> {{patient.firstName}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
@@ -44,6 +31,7 @@
       </th>
 
       <td mat-cell *matCellDef="let patient" style="text-align: right">
+
 
 
         <button mat-icon-button id="edit-button" matTooltip="edit patient">
@@ -61,6 +49,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </mat-card>
+
+
 
 
 
