--- a/src/app/components/personal-info-view/disease-list/disease-list.component.html
+++ b/src/app/components/personal-info-view/disease-list/disease-list.component.html
@@ -1,1 +1,75 @@
-<p>disease-list works!</p>
+
+<mat-card>
+  <table mat-table [dataSource]="diseaseList" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="#">
+      <th mat-header-cell *matHeaderCellDef> # </th>
+      <td mat-cell *matCellDef="let personIndex = index"> {{personIndex + 1}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="patient">
+      <th mat-header-cell *matHeaderCellDef> patient </th>
+      <td mat-cell *matCellDef="let patient"> {{patient.firstName}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="undergoneSurgery">
+      <th mat-header-cell *matHeaderCellDef> undergoneSurgery </th>
+      <td mat-cell *matCellDef="let patient"> {{patient.lastName}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="surgeryReason">
+      <th mat-header-cell *matHeaderCellDef> surgeryReason </th>
+      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="surgeries">
+      <th mat-header-cell *matHeaderCellDef> surgeries </th>
+      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="preExistingIllness">
+      <th mat-header-cell *matHeaderCellDef> preExistingIllness </th>
+      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef style="text-align: right">
+        <button mat-mini-fab color="primary" id="add-button" matTooltip="add new patient">
+          <mat-icon class="example-tab-icon">add</mat-icon>
+        </button>
+      </th>
+
+      <td mat-cell *matCellDef="let patient" style="text-align: right">
+
+
+        <button mat-icon-button id="edit-button" matTooltip="edit patient">
+          <mat-icon class="example-tab-icon">edit</mat-icon>
+        </button>
+
+        <button mat-icon-button color="warn" id="delete-button"
+                (click)="deletePatient()" matTooltip="delete patient">
+          <mat-icon class="example-tab-icon">delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+</mat-card>
+
+
+
+
+
+
