--- a/src/app/components/personal-info-view/medication-in-take-list/medication-in-take-list.component.html
+++ b/src/app/components/personal-info-view/medication-in-take-list/medication-in-take-list.component.html
@@ -1,6 +1,6 @@
 
 <mat-card>
-  <table mat-table [dataSource]="diagnosisList" class="mat-elevation-z8">
+  <table mat-table [dataSource]="medicationInTakeList" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -18,20 +18,26 @@
     </ng-container>
 
     <!-- Weight Column -->
-    <ng-container matColumnDef="examinations">
-      <th mat-header-cell *matHeaderCellDef> examinations </th>
+    <ng-container matColumnDef="designation">
+      <th mat-header-cell *matHeaderCellDef> designation </th>
       <td mat-cell *matCellDef="let patient"> {{patient.lastName}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> date </th>
+    <ng-container matColumnDef="dosage">
+      <th mat-header-cell *matHeaderCellDef> dosage </th>
       <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef> type </th>
+    <ng-container matColumnDef="startDate">
+      <th mat-header-cell *matHeaderCellDef> startDate </th>
+      <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="bloodDiluent">
+      <th mat-header-cell *matHeaderCellDef> bloodDiluent </th>
       <td mat-cell *matCellDef="let patient"> {{patient.userName}} </td>
     </ng-container>
 
@@ -61,6 +67,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 </mat-card>
+
 
 
 
