#6: my profile modal is done

--- a/src/app/components/log-in/new-registration/new-registration.component.html
+++ b/src/app/components/log-in/new-registration/new-registration.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="text-left pointer" style="">
-      <a href="{{login_path}}" id="to-login">Zurrueck to login</a>
+      <a href="{{login_path}}" id="to-login">Zurrueck zu Login</a>
     </div>
 
     <mat-divider></mat-divider>
