--- a/src/app/components/log-in/reset-password/reset-password.component.html
+++ b/src/app/components/log-in/reset-password/reset-password.component.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="text-left pointer" style="margin-top: -20px">
-              <a href="{{login_path}}" id="reset-password">Zurrueck to login</a>
+              <a href="{{login_path}}" id="reset-password">Zurrueck zu Login</a>
             </div>
 
 
