--- a/src/app/components/patient-info-view/patient-info-view.component.html
+++ b/src/app/components/patient-info-view/patient-info-view.component.html
@@ -1,3 +1,49 @@
 <app-header [title]="headerTitle"></app-header>
 
-<p>patient-info-view works!</p>
+<mat-tab-group [selectedIndex]="tabIndex" (selectedTabChange)="onTabClicked($event)">
+
+  <!-- DIAGNOSIS -->
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <img class="material-icons" height="24"
+           src="../../../assets/logos/diagnose.jpg" style="margin-right: 7px" viewBox="0 0 24 24"
+           width="24">
+      Meine Diagnosen
+    </ng-template>
+    <app-diagnosis-list-patient></app-diagnosis-list-patient>
+  </mat-tab>
+
+  <!-- Disease -->
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <img class="material-icons" height="24"
+           src="../../../assets/logos/disease.png" style="margin-right: 7px" viewBox="0 0 24 24"
+           width="24">
+      Meine Krankheiten
+    </ng-template>
+    <app-disease-list-patient></app-disease-list-patient>
+  </mat-tab>
+
+  <!-- AllergieTypen -->
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <img class="material-icons" height="24"
+           src="../../../assets/logos/allergie.png" style="margin-right: 7px" viewBox="0 0 24 24"
+           width="24">
+      Meine Allergien
+    </ng-template>
+    <app-allergy-list-patient></app-allergy-list-patient>
+  </mat-tab>
+
+  <!-- MedicationInTake -->
+  <mat-tab>
+    <ng-template mat-tab-label>
+      <img class="material-icons" height="24"
+           src="../../../assets/logos/medikamente.png" style="margin-right: 7px" viewBox="0 0 24 24"
+           width="24">
+      Meine Medikamente
+    </ng-template>
+    <app-medication-in-take-list-patient></app-medication-in-take-list-patient>
+  </mat-tab>
+
+</mat-tab-group>
