--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -44,13 +44,13 @@
       <div class="panel panel-primary">
         <form class="log-in-form" #userData="ngForm">
           <div>
-            <div>
+            <div style="margin-bottom: 50px">
               <p>
                 Willkommen im Projekt Anamnese System - Bitte loggen Sie sich ein
               </p>
-              <p style="text-align: center">
-                Kein Konto? Jetzt <a href="{{new_registration_path}}" class="pointer">registrieren</a>
-              </p>
+<!--              <p style="text-align: center">-->
+<!--                Kein Konto? Jetzt <a href="{{new_registration_path}}" class="pointer">registrieren</a>-->
+<!--              </p>-->
             </div>
 
             <!-- USERNAME FIELD -->
