--- a/src/app/shared/dialogs/start-new-registration-modal/start-new-registration-modal.component.html
+++ b/src/app/shared/dialogs/start-new-registration-modal/start-new-registration-modal.component.html
@@ -1,17 +1,44 @@
+<h2 style="text-align: center">
+  {{modalTitle}}
+</h2>
+
+<mat-divider></mat-divider>
+
+
 <mat-horizontal-stepper linear #stepper style="margin-top: 30px">
 
   <!--   Personenbezogene Daten   -->
   <mat-step [stepControl]="personenbezogeneFormGroup">
     <form [formGroup]="personenbezogeneFormGroup">
-      <ng-template matStepLabel>Personendaten</ng-template>
-      <mat-form-field style="width: 60px; margin-right: 50px">
-        <mat-label>Gesch.</mat-label>
-        <mat-select formControlName="geschlechtCtrl" name="geschlecht" required>
-          <mat-option *ngFor="let gesch of geschlechte" [value]="gesch">
-            {{gesch}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <ng-template matStepLabel>Personenbezogene Daten</ng-template>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <mat-form-field style="width: 60px; margin-right: 50px">
+            <mat-label>Gesch.</mat-label>
+            <mat-select formControlName="geschlechtCtrl" name="geschlecht" required>
+              <mat-option *ngFor="let gesch of gender" [value]="gesch">
+                {{gesch}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="col-sm-6" style="text-align: right">
+          <div style="position: relative; right: 20px">
+            <mat-label>Kinder?</mat-label><br>
+            <mat-button-toggle-group appearance="legacy" name="undergoneSurgery" (change)="onHasChildren($event.value)"
+                                     aria-label="Font Style" [value]="'false'" required>
+              <mat-button-toggle value="true">Ja</mat-button-toggle>
+              <mat-button-toggle value="false">Nein</mat-button-toggle>
+            </mat-button-toggle-group>
+          </div>
+        </div>
+      </div>
+
+
+
+
 
       <mat-form-field>
         <mat-label>Vorname</mat-label>
@@ -21,7 +48,7 @@
       <mat-form-field>
         <mat-label>Nachname</mat-label>
         <input matInput placeholder="Nachname" formControlName="nachnameCtrl" required>
-      </mat-form-field><br>
+      </mat-form-field>
 
       <mat-form-field>
         <mat-label>Beruf</mat-label>
@@ -36,6 +63,17 @@
       <mat-form-field>
         <mat-label>Gewicht</mat-label>
         <input matInput type="number" placeholder="Gewicht" formControlName="gewichtCtrl">
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Familienstand</mat-label>
+        <input matInput placeholder="Familienstand" formControlName="familienstandCtrl"
+               [matAutocomplete]="familienstandAutoComplete">
+        <mat-autocomplete #familienstandAutoComplete="matAutocomplete">
+          <mat-option *ngFor="let stand of familienstandList" [value]="stand">
+            <span>{{stand}}</span>
+          </mat-option>
+        </mat-autocomplete>
       </mat-form-field>
 
       <div style="text-align: right">
@@ -71,24 +109,24 @@
     <form [formGroup]="anschriftFormGroup">
       <ng-template matStepLabel>Anschrift</ng-template>
 
-      <mat-form-field  style="width: 61%">
+      <mat-form-field  style="width: 45%">
         <mat-label>Strasse</mat-label>
         <input matInput placeholder="Strasse und Hausnummer" formControlName="strasseCtrl" required>
       </mat-form-field>
 
-      <mat-form-field>
+      <mat-form-field  style="width: 45%">
         <mat-label>Plz.</mat-label>
         <input matInput placeholder="Postleitzahl" formControlName="plzCtrl" required>
       </mat-form-field><br>
 
       <mat-form-field  style="width: 45%">
-        <mat-label>Land</mat-label>
-        <input matInput placeholder="Land" formControlName="landCtrl" required>
+        <mat-label>Stadt</mat-label>
+        <input matInput placeholder="Stadt" formControlName="stadtCtrl" required>
       </mat-form-field>
 
       <mat-form-field  style="width: 45%">
-        <mat-label>Stadt</mat-label>
-        <input matInput placeholder="Stadt" formControlName="stadtCtrl" required>
+        <mat-label>Land</mat-label>
+        <input matInput placeholder="Land" formControlName="landCtrl" required>
       </mat-form-field>
 
       <div style="text-align: right">
@@ -103,12 +141,12 @@
     <form [formGroup]="zugangdatenFormGroup">
       <ng-template matStepLabel>Zugangdaten</ng-template>
 
-      <mat-form-field>
+      <mat-form-field  style="width: 45%">
         <mat-label>Benutzername</mat-label>
         <input matInput placeholder="Benutzername" formControlName="benutzernameCtrl" required>
-      </mat-form-field>
+      </mat-form-field><br>
 
-      <mat-form-field>
+      <mat-form-field  style="width: 45%">
         <mat-label>Passwort</mat-label>
         <input matInput autocomplete="off" placeholder="Passwort"
                formControlName="passwort1Ctrl" [type] = "hidePassword1 ? 'password' : 'text'" required>
@@ -117,7 +155,7 @@
         </mat-icon>
       </mat-form-field>
 
-      <mat-form-field>
+      <mat-form-field  style="width: 45%">
         <mat-label>Passwort (Bestaetigung)</mat-label>
         <input matInput autocomplete="off" placeholder="Passwort bestaetigen"
                formControlName="passwort2Ctrl" [type] = "hidePassword2 ? 'password' : 'text'" required>
@@ -126,33 +164,44 @@
         </mat-icon>
       </mat-form-field><br>
 
-      <mat-form-field style="width: 79%">
+      <mat-form-field style="width: 45%">
         <mat-label>Geheimfrage</mat-label>
         <mat-select formControlName="geheimfrageCtrl" name="geheimfrage" required>
           <mat-option *ngFor="let frage of geheimfragen" [value]="frage">
             {{frage}}
           </mat-option>
         </mat-select>
-      </mat-form-field><br>
+      </mat-form-field>
 
-      <mat-form-field style="width: 50%">
+      <mat-form-field style="width: 45%">
         <mat-label>Antwort</mat-label>
         <input matInput placeholder="Antwort" formControlName="antwortCtrl" required>
       </mat-form-field>
 
       <div style="text-align: right">
         <button mat-button matStepperPrevious>Zurrück</button>
-        <button mat-button color="primary" matStepperNext [disabled]="!person.passWord" (click)="confirmPwdRegistration()">Registrieren</button>
+        <button mat-button color="primary" matStepperNext [disabled]="!zugangdatenFormGroup.valid" (click)="confirmPwdRegistration()">Registrieren</button>
       </div>
     </form>
   </mat-step>
 
   <mat-step>
-    <ng-template matStepLabel>Done</ng-template>
-    <p>Registrierung abgeschlossen.</p>
+    <ng-template matStepLabel>Bericht</ng-template>
+    <p>{{berich}}</p>
+
+    <ul *ngIf="userCreted" style="margin-top: 20px">
+      <li>
+        Benutzername: <h3>{{person.userName}}</h3>
+      </li>
+      <li>
+        Passwort: <h3>{{person.password}}</h3>
+      </li>
+    </ul>
+
     <div style="text-align: right">
-      <button mat-button matStepperPrevious>Back</button>
-      <button mat-button color="accent" (click)="stepper.reset(); toLogInPage()">Zum Login</button>
+      <button *ngIf="!userCreted" mat-button matStepperPrevious>Zurrück</button>
+      <button *ngIf="!userCreted" mat-button color="accent" (click)="stepper.reset(); onNoClick(false)">Schließen</button>
+      <button *ngIf="userCreted" mat-button color="accent" (click)="stepper.reset(); onNoClick(true)">Schließen</button>
     </div>
   </mat-step>
 
