--- a/src/app/components/personal-info-view/allergy-list/allergy-list.component.html
+++ b/src/app/components/personal-info-view/allergy-list/allergy-list.component.html
@@ -34,7 +34,7 @@
 
 
         <button (click)="onAddNewOrEdit(allergy)" id="edit-button" mat-icon-button
-                matTooltip="edit allergy">
+                matTooltip="edit allergy" disabled>
           <mat-icon class="example-tab-icon">edit</mat-icon>
         </button>
 
